cmake_minimum_required(VERSION 3.15)
project(Rythm)

set(CMAKE_CXX_STANDARD 14)

add_executable(EmaSuper HackerRank/SuperComputerDeEmma.cpp)
add_executable(NonDivisibleSubset HackerRank/NonDivisibleSubset.cpp)
add_executable(Bomberman HackerRank/Bomberman.cpp)
add_executable(QueensAttack HackerRank/QueensAttack2.cpp)
add_executable(ClimbingLeaderboard HackerRank/ClimbingLeaderBoard.cpp)
add_executable(LibsAndRoads HackerRank/LibsAndRoads.cpp)
add_executable(MoonJourney HackerRank/JourneyToTheMoon.cpp)
add_executable(HusGame HackerRank/HusGame.cpp)